<resources>
    <string name="app_name">Observatoire des taux</string>

    <string name="presentation">Présentation</string>
    <string name="jauges_de_pression_conjoncturelle">Jauges de pression conjoncturelle</string>
    <string name="theorie_gfm">Théorie GFM</string>
    <string name="taux_variables">Taux variables</string>
    <string name="taux_fixes">Taux fixes</string>
    <string name="site_address">https://gipilab.org</string>
    <string name="editorPrefLastUrlKey">lastURL</string>
    <string name="courbe_des_taux">Courbe des taux</string>
    <string name="historique_des_taux">Historique des taux</string>
    <string name="pression_conjoncturelle">Pression conjoncturelle</string>
    <string name="volatilit_des_taux">Volatilité des taux</string>
    <string name="licence_et_code_source">Mentions légales</string>
    <string name="apropos">À propos</string>
</resources>
